data/examples/RobotShop/workDir/dispatch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispatch
  labels:
    app: dispatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dispatch
  template:
    metadata:
      labels:
        app: dispatch
    spec:
      containers:
      - name: dispatch
        image: robotshop/rs-dispatch
        imagePullPolicy: 
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
      restartPolicy: Always
