data/examples/RobotShop/workDir/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment

  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: robotshop/rs-payment
        imagePullPolicy: 
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
      restartPolicy: Always
