data/examples/RobotShop/workDir/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart
  labels:
    app: cart
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: cart
