data/examples/RobotShop/workDir/catalogue-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: catalogue
  name: catalogue
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: catalogue
