data/examples/RobotShop/workDir/dispatch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dispatch
  labels:
    app: dispatch  
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 55555
    targetPort: 0
  selector:
    app: dispatch
