data/examples/RobotShop/workDir/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: payment
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: payment
