data/examples/RobotShop/workDir/ratings-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings
  labels:
    app: ratings
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: ratings
